Fixing Empty Layout pages having white space at top of page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root{
+#root, html{
   height:100vh;
   width:100vw;
   background-color: #abc5e6;
@@ -22,8 +22,6 @@
 @media screen and (max-width: 700px){
   #root, html{
     margin:0;
-    width:100vw;
-    height:100vh;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0;
